Ajout des styles pour l'authentification (WiP)

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,6 +1,10 @@
 // Colors
 $picton-blue: #28a6e5;
+$mine-shaft: #333;
 
 // Typography
 $font-family: "IBM Plex Sans", sans-serif;
 $font-weight-base: 300;
+
+// Body
+$body-color: $mine-shaft;
