--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -8,4 +8,6 @@ body {
   margin: 0;
   font-family: $font-family;
   font-weight: $font-weight-base;
+  color: $body-color;
+  border-top: .3125rem solid $picton-blue;
 }
