--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -7,7 +7,13 @@
 body {
   margin: 0;
   font-family: $font-family;
+  font-size: $font-size-base;
   font-weight: $font-weight-base;
   color: $body-color;
   border-top: .3125rem solid $picton-blue;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-size: $font-size-base;
 }
