--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,5 +5,8 @@
 @import "base/variables";
 @import "base/reset";
 
+// Components
+@import "components/form";
+
 // Objects
 @import "objects/headings";
