--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -9,6 +9,7 @@ body {
   font-family: $font-family;
   font-size: $font-size-base;
   font-weight: $font-weight-base;
+  color: $body-color;
   border-top: .3125rem solid $primary;
 }
 
