--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,12 +1,22 @@
 // Color system
 $blue: #28a6e5;
+$gray-100: #f4f4f4;
+$gray-500: #a8a8a8;
+$gray-700: #4d4d4d;
 
 $primary: $blue;
+
+// Body
+$body-color: $gray-700;
 
 // Typography
 $font-family: "IBM Plex Sans", sans-serif;
 $font-size-base: 1rem;
+$font-size-sm: $font-size-base * .75;
 $font-weight-base: 400;
 
 $headings-font-family: "Poppins", sans-serif;
 $headings-font-weight: 600;
+
+// Components
+$border-radius: .625rem;
