Suppression de la syntaxe BEM

--- a/src/styles/objects/_headings.scss
+++ b/src/styles/objects/_headings.scss
@@ -1,23 +1,23 @@
-.o-h1 {
+.h1 {
   @extend h1;
 }
 
-.o-h2 {
+.h2 {
   @extend h2;
 }
 
-.o-h3 {
+.h3 {
   @extend h3;
 }
 
-.o-h4 {
+.h4 {
   @extend h4;
 }
 
-.o-h5 {
+.h5 {
   @extend h5;
 }
 
-.o-h6 {
+.h6 {
   @extend h6;
 }
