--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,7 +7,11 @@
 
 // Components
 @import "components/button";
-@import "components/form";
+
+// Forms
+@import "form/field";
+@import "form/input";
+@import "form/label";
 
 // Objects
 @import "objects/headings";
