--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,6 +5,11 @@
 @import "base/variables";
 @import "base/reset";
 
+// Grid
+@import "grid/column";
+@import "grid/container";
+@import "grid/row";
+
 // Components
 @import "components/button";
 
