--- a/src/styles/grid/_column.scss
+++ b/src/styles/grid/_column.scss
@@ -4,7 +4,7 @@
   padding-left: $column-gap;
 
   @each $name, $width in $breakpoints {
-    @media (min-width: $width) {
+    @include from($name) {
       @for $i from 1 through $grid-columns {
         &.is-#{$i}-#{$name} {
           width: percentage($i / $grid-columns);
