--- a/src/styles/grid/_row.scss
+++ b/src/styles/grid/_row.scss
@@ -1,5 +1,8 @@
 .row {
   display: flex;
+  flex-wrap: wrap;
+  margin-right: -$column-gap;
+  margin-left: -$column-gap;
 
   &.is-centered {
     justify-content: center;
