--- a/src/styles/layout/_page-header.scss
+++ b/src/styles/layout/_page-header.scss
@@ -1,5 +1,6 @@
 .page-header {
-  padding: $column-gap;
+  padding-top: $column-gap;
+  padding-bottom: $column-gap;
 
   @include until(desktop) {
     background-color: $primary;
