--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -30,6 +30,14 @@ $breakpoints: (
   widescreen: 1200px
 );
 
+// Grid containers
+$container-max-widths: (
+  mobile: 540px,
+  tablet: 720px,
+  desktop: 960px,
+  widescreen: 1140px
+);
+
 // Grid columns
 $grid-columns: 12;
 $column-gap: .75rem;
