feat: Ajout de la génération dynamique du menu

--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -46,10 +46,10 @@
 
     &.is-active {
       background-color: $gray-100;
+    }
 
-      ~ .dropdown-menu {
-        display: block;
-      }
+    &.is-open ~ .dropdown-menu {
+      display: block;
     }
   }
 
