--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -47,7 +47,7 @@ $body-color: $gray-700;
 
 // Typography
 $font-family: "IBM Plex Sans", sans-serif;
-$font-size-base: 1rem;
+$font-size-base: .875rem;
 $font-size-sm: $font-size-base * .75;
 $font-weight-base: 400;
 
