--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -38,7 +38,6 @@
     align-items: center;
     margin-bottom: .5rem;
     font-family: $headings-font-family;
-    font-size: .875rem;
     font-weight: $headings-font-weight;
     color: $body-color;
     text-decoration: none;
@@ -78,13 +77,56 @@
   .dropdown-item {
     display: block;
     margin-bottom: 1rem;
-    font-size: .875rem;
     color: $body-color;
     text-decoration: none;
     transition: ease-in-out all 250ms;
 
     &:not(.is-active):hover { padding-left: .5rem; }
     &.is-active { color: $primary; }
+  }
+
+  .user {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding-top: 1rem;
+    border-top: .1875rem solid $gray-100;
+  }
+
+  .user-avatar {
+    img {
+      width: 1.875rem;
+    }
+  }
+
+  .user-info {
+    margin-left: .625rem;
+  }
+
+  .user-name {
+    display: block;
+    font-family: $headings-font-family;
+    font-weight: $headings-font-weight;
+  }
+
+  .user-role {
+    color: $gray-500;
+  }
+
+  .user-nav {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+
+  .user-link {
+    margin-left: .625rem;
+    font-size: 1rem;
+    color: $gray-500;
+    text-decoration: none;
   }
 
   @include until(desktop) {
